Fixed UI being hidden by site container

--- a/less/theme.less
+++ b/less/theme.less
@@ -102,7 +102,7 @@ body {
     position: relative;
     z-index: 50;
     background-color: @color__container--background;
-    
+
     #page-zones__main > .widget:not([data-name="row"]):first-child {
         margin-bottom: 30px;
     }
@@ -120,10 +120,6 @@ body {
         position: relative;
         z-index: 50;
         background-color: @color__container--background;
-
-        #page-zones__main > .widget:not([data-name="row"]):first-child {
-            margin: 0;
-        }
     }
 }
 
